# rustig

./: .gitignore  Cargo.toml
src/: camera.rs  device.rs  graphics.rs  main.rs  object.rs  player.rs  ubo.rs  vertex.rs  window.rs
