[package]
name = "rustig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
bytemuck = { version = "1.14.0", features = ["derive"] }
image = "0.24.7"
nalgebra = { version = "0.32.3", features = ["bytemuck"] }
smallvec = "1.11.1"
tobj = "4.0.0"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.7"
